* Long usernames got cropped (index.css) [Bug 3282]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@8948 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/core/css/index.css
+++ b/Themes/core/css/index.css
@@ -2245,15 +2245,18 @@ dl
 }
 #basicinfo h4
 {
-	font-size: 150%;
+	font-size: 135%;
 	font-weight: 100;
 	line-height: 105%;
-	white-space: normal;
+	white-space: pre-wrap; /* css-2.1 */
+	white-space: -moz-pre-wrap; /* Mozilla */
+	white-space: -o-pre-wrap; /* Opera 7 */
+	word-wrap: break-word; /* Internet Explorer 5.5+ */
 	overflow: hidden;
 }
 #basicinfo h4 span.position
 {
-	font-size: 65%;
+	font-size: 80%;
 	font-weight: 100;
 	display: block;
 }
